# nvim

./: CHANGELOG.md  README.md  init.lua  lazy-lock.json  package-lock.json  pyproject.toml
lua/: vim-options.lua
lua/configs/: autocommands.lua  mappings.lua  settings.lua
lua/plugins/: alpha.lua  autoclose.lua  catppuccin.lua  completions.lua  lsp-config.lua  lualine.lua  neo-tree.lua  none-ls.lua  solarized.lua  table-mode.lua  telescope.lua  treesitter.lua
